--- a/04-activity-transitions/projects/starter/app/src/main/res/navigation/nav_graph.xml
+++ b/04-activity-transitions/projects/starter/app/src/main/res/navigation/nav_graph.xml
@@ -11,8 +11,12 @@
     android:label="PopularMoviesFragment"
     tools:layout="@layout/fragment_popular">
     <action
-      android:id="@+id/action_popularMoviesFragment_to_movieDetailsFragment"
-      app:destination="@id/movieDetailsFragment" />
+        android:id="@+id/action_popularMoviesFragment_to_movieDetailsFragment"
+        app:destination="@id/movieDetailsFragment"
+        app:enterAnim="@anim/nav_graph_enter"
+        app:exitAnim="@anim/nav_graph_exit"
+        app:popEnterAnim="@anim/nav_graph_pop_enter"
+        app:popExitAnim="@anim/nav_graph_pop_exit" />
   </fragment>
 
   <fragment
