Play with diff utils and add rotation animation

--- a/07-basic-list-animations/projects/starter/app/src/main/res/anim/item_animation.xml
+++ b/07-basic-list-animations/projects/starter/app/src/main/res/anim/item_animation.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layoutAnimation xmlns:android="http://schemas.android.com/apk/res/android"
-    android:animation="@anim/vertical_translation_item_animation"
+    android:animation="@anim/rotation_animation"
     android:animationOrder="normal" />
